showroom/kubectl/cluster.yaml
# our 3-tier layered namespaces
apiVersion: v1
kind: Namespace
metadata:
  name: tier-1
  labels:
    name: tier-1
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: tier-2
  labels:
    name: tier-2
---
apiVersion: v1
kind: Namespace
metadata:
  name: tier-3
  labels:
    name: tier-3
