showroom/kubectl/tier-3.yaml
# Namespace of log-sink (opensearch), prometheus and grafana
apiVersion: v1
kind: Namespace
metadata:
  name: tier-3
  labels:
    name: otelcol-agent
---
