showroom/kubectl/collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      containers:
        - name: collector
          # image: otel/opentelemetry-collector:latest  # contains only [zpages, health_check, pprof] extensions
          image: otel/opentelemetry-collector-contrib:latest
          args: ["--config=/conf/config.yaml"]
          volumeMounts:
            - name: config
              mountPath: /conf
      volumes:
        - name: config
          configMap:
            name: collector-config
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  type: NodePort
  selector:
    app: collector
  ports:
    - name: otlp
      appProtocol: grpc
      port: 4317
      targetPort: 4317
      nodePort: 30317
    - name: otlp-http
      port: 4318
      targetPort: 4318
      nodePort: 30318
