showroom/kubectl/log-sink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-sink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-sink
  template:
    metadata:
      labels:
        app: log-sink
    spec:
      containers:
        - name: log-sink
          # image: otel/opentelemetry-collector:latest  # contains only [zpages, health_check, pprof] extensions
          image: otel/opentelemetry-collector-contrib:latest
          # googleclientauth jaegerremotesampling k8s_observer file_storage pprof jaeger_encoding opamp awsproxy health_check ecs_observer kafkatopics_observer ack asapclient basicauth otlp_encoding redis_storage zpages awscloudwatchmetricstreams_encoding json_log_encoding zipkin_encoding headers_setter oauth2client azureauth bearertokenauth docker_observer ecs_task_observer host_observer oidc sigv4auth db_storage http_forwarder sumologic k8s_leader_elector
          args: ["--config=/conf/config.yaml"]
          volumeMounts:
            - name: config
              mountPath: /conf
            - name: data
              mountPath: /data
        - name: nginx-sidecar
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
      volumes:
        - name: config
          configMap:
            name: log-sink-config
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: log-sink
spec:
  selector:
    app: log-sink
  ports:
    - name: grpc
      port: 4317
      targetPort: 4317
    - name: http
      port: 4318
      targetPort: 4318
---
apiVersion: v1
kind: Service
metadata:
  name: log-sink-nginx
spec:
  selector:
    app: log-sink
  type: NodePort
  ports:
    - name: nginx
      port: 8080
      targetPort: 80
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: log-sink-metrics
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8888"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: log-sink
  ports:
    - name: metrics
      port: 8888
      targetPort: 8888
