showroom/kubectl/istio-otelcol-fault-injection.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: otel-collector-fault-injection
spec:
  hosts:
    - otel-collector
  http:
    - fault:
        abort:
          percentage:
            value: 50.0
          httpStatus: 500
      route:
        - destination:
            host: otel-collector
